--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext {
         RNNKotlinVersion = "1.4.31"
         buildToolsVersion = "31.0.0"
+        kotlin_version = "1.7.0"
         minSdkVersion = 21
         compileSdkVersion = 31
         targetSdkVersion = 31
@@ -23,7 +24,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
         classpath("com.android.tools.build:gradle:7.0.4")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:4.1.2")
