--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.68.2",
     "react-native-navigation": "^7.28.0",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-svg": "^12.3.0"
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
