--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "native-base": "^3.4.7",
     "react": "17.0.2",
     "react-native": "0.68.2",
