--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/netinfo": "^9.1.0",
     "axios": "^0.27.2",
     "native-base": "^3.4.7",
     "react": "17.0.2",
