--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-navigation": "^7.28.0",
+    "react-native-paper": "^4.12.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0"
