--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/netinfo": "^9.3.0",
     "axios": "^0.27.2",
     "native-base": "^3.4.7",
     "react": "17.0.2",
